[gd_scene load_steps=5 format=3 uid="uid://typing_prototype_001"]

[ext_resource type="Script" path="res://scenes/prototypes/typing_prototype/typing_prototype.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://c2cwox8a2x8qj" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://dqv2jyle6s7j1" path="res://scenes/enemies/enemy.tscn" id="3_enemy"]
[ext_resource type="Script" path="res://scripts/input/typing_spell_input.gd" id="4_typing"]

[node name="TypingPrototype" type="Node2D"]
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1, 0.12, 0.15, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(576, 400)

[node name="TypingSpellInput" type="Node" parent="."]
script = ExtResource("4_typing")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BufferLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="SpellLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 50.0
text = "Type to cast spells"

[node name="HintLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="HelpLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = -50.0
horizontal_alignment = 1
text = "Type spell names, then LEFT CLICK to cast at cursor
WASD to move | Backspace to delete | ESC to clear"

[node name="Enemy1" parent="." instance=ExtResource("3_enemy")]
position = Vector2(200, 150)

[node name="Enemy2" parent="." instance=ExtResource("3_enemy")]
position = Vector2(900, 150)

[node name="Enemy3" parent="." instance=ExtResource("3_enemy")]
position = Vector2(200, 550)

[node name="Enemy4" parent="." instance=ExtResource("3_enemy")]
position = Vector2(900, 550)

[node name="Enemy5" parent="." instance=ExtResource("3_enemy")]
position = Vector2(550, 200)

[node name="Enemy6" parent="." instance=ExtResource("3_enemy")]
position = Vector2(400, 300)

[node name="Enemy7" parent="." instance=ExtResource("3_enemy")]
position = Vector2(700, 300)
